--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,4 +19,11 @@
     font-style: italic;
 }
 
+.search {
+    display: inline-block;
+    margin-top: 0.6%;
+}
 
+.search .col-md-6 {
+    width: 100%;
+}
