--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,11 @@
     margin-bottom: 20px;
 }
 
+.posts {
+    padding: 16px 0;
+    border-bottom: 1px solid black;
+}
+
 .posts .post{
     padding-left: 10px;
     border-left: 3px solid #a21b24;
